name:                cardano-wallet-core
version:             2020.2.17
synopsis:            The Wallet Backend for a Cardano node.
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018-2020 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      base
    , bytestring
    , containers
    , cryptonite
    , deepseq
    , extra
    , fmt
    , memory
    , random
    , text
    , transformers
    , vector
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.Wallet.Primitive.CoinSelection
      Cardano.Wallet.Primitive.CoinSelection.LargestFirst
      Cardano.Wallet.Primitive.CoinSelection.Migration
      Cardano.Wallet.Primitive.CoinSelection.Random
      Cardano.Wallet.Primitive.Fee
      Cardano.Wallet.Primitive.Types
      Cardano.Wallet.Unsafe
      Data.Quantity
      Data.Vector.Shuffle
  other-modules:
      Paths_cardano_wallet_core

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (!flag(development))
    ghc-options:
      -O2
      -Werror
  build-depends:
      base
    , bytestring
    , cardano-wallet-core
    , containers
    , cryptonite
    , deepseq
    , extra
    , fmt
    , hspec
    , memory
    , QuickCheck
    , random
    , text
    , transformers
    , vector
  build-tools:
      hspec-discover
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  other-modules:
      Cardano.Wallet.Primitive.CoinSelection.LargestFirstSpec
      Cardano.Wallet.Primitive.CoinSelection.MigrationSpec
      Cardano.Wallet.Primitive.CoinSelection.RandomSpec
      Cardano.Wallet.Primitive.CoinSelectionSpec
      Cardano.Wallet.Primitive.FeeSpec
      Cardano.Wallet.Primitive.TypesSpec
      Data.Vector.ShuffleSpec
