name:                cardano-wallet-core
version:             2020.2.17
synopsis:            The Wallet Backend for a Cardano node.
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018-2020 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      aeson
    , async
    , base
    , base58-bytestring
    , basement
    , bech32
    , bech32-th
    , binary
    , bytestring
    , cardano-crypto
    , cborg
    , conduit
    , containers
    , contra-tracer
    , cryptonite
    , deepseq
    , digest
    , directory
    , exceptions
    , extra
    , fast-logger
    , file-embed
    , filepath
    , fmt
    , foldl
    , generic-lens
    , http-api-data
    , http-client
    , http-conduit
    , http-media
    , http-types
    , iohk-monitoring
    , lifted-base
    , memory
    , monad-logger
    , network
    , OddWord
    , path-pieces
    , persistent
    , persistent-sqlite
    , persistent-template
    , process
    , random
    , retry
    , safe
    , servant
    , servant-client
    , servant-server
    , split
    , streaming-commons
    , template-haskell
    , text
    , text-class
    , time
    , transformers
    , unliftio
    , unordered-containers
    , vector
    , wai
    , warp
    , zip
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.Wallet.Primitive.CoinSelection
      Cardano.Wallet.Primitive.CoinSelection.LargestFirst
      Cardano.Wallet.Primitive.CoinSelection.Migration
      Cardano.Wallet.Primitive.CoinSelection.Random
      Cardano.Wallet.Primitive.Fee
      Cardano.Wallet.Primitive.Types
      Cardano.Wallet.Unsafe
      Data.Quantity
      Data.Vector.Shuffle
  other-modules:
      Paths_cardano_wallet_core

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (!flag(development))
    ghc-options:
      -O2
      -Werror
  build-depends:
      base
    , aeson
    , aeson-qq
    , async
    , bytestring
    , cardano-crypto
    , cardano-wallet-core
    , cborg
    , containers
    , contra-tracer
    , cryptonite
    , directory
    , deepseq
    , extra >= 1.6.17
    , file-embed
    , filepath
    , fmt
    , foldl
    , generic-arbitrary
    , generic-lens
    , hspec
    , hspec-golden-aeson
    , http-api-data
    , http-client
    , http-types
    , iohk-monitoring
    , memory
    , network
    , persistent
    , OddWord
    , QuickCheck
    , quickcheck-state-machine >= 0.6.0
    , random
    , safe
    , servant
    , servant-server
    , servant-swagger
    , stm
    , swagger2
    , temporary
    , text
    , text-class
    , time
    , transformers
    , tree-diff
    , unordered-containers
    , yaml
    , wai
    , warp
    , zip
  build-tools:
      hspec-discover
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
  main-is:
      Spec.hs
  other-modules:
      Cardano.Wallet.Primitive.CoinSelection.LargestFirstSpec
      Cardano.Wallet.Primitive.CoinSelection.MigrationSpec
      Cardano.Wallet.Primitive.CoinSelection.RandomSpec
      Cardano.Wallet.Primitive.CoinSelectionSpec
      Cardano.Wallet.Primitive.FeeSpec
      Cardano.Wallet.Primitive.TypesSpec
      Data.Vector.ShuffleSpec
